# 20221021_workshop

./: .gitignore  README.md  data.dvc  main.py  makefile  pyproject.toml  snakefile
.dvc/: config
src/: create_figure.R  print.py
